web changes made

--- a/index.html
+++ b/index.html
@@ -15,6 +15,18 @@
     <link rel="stylesheet" href="./fontawesome/css/all.min.css">
     <link rel="stylesheet" href="./fontawesome/css/all.css">
     <link rel="stylesheet" href="css.css" />
+    <style>
+      /* .magnify-on-hover:hover{
+        overflow: visible;
+        top: 200px;
+        position: absolute;
+        display: block;
+        z-index: 3;
+        width: 200px;
+        height: 300px;
+        transition: all 1s;
+      } */
+    </style>
   </head>
   <body>
     <nav>
@@ -165,7 +177,23 @@
               <a href="https://jzx.herokuapp.com/" class="btn-1">website</a>
             </div>
           </div>
+          <div class="card">
+            <div class="card-title">
+                  Lexbert Task Management system
+            </div>
+            <div class="card-desc">
+              A task management system for for Lexbert company Accra
+               <a href="./view-x.html" class="btn-1">view</a>
+              <!-- <div class="row">
+                
+              </div> -->
+            </div>
   
+            <div class="card-footer">
+              <a aria-disabled="true" href="#" class="btn-1">codes</a>
+              <a href="#" class="btn-1">website</a>
+            </div>
+          </div>
           <div class="card">
             <div class="card-title">
                   portfolio site
