--- a/index.html
+++ b/index.html
@@ -194,6 +194,23 @@
               <a href="#" class="btn-1">website</a>
             </div>
           </div>
+             <div class="card">
+            <div class="card-title">
+                  IOT Project(Automated water filling ystem)
+            </div>
+            <div class="card-desc">
+             A prototype of an automated water filing system 
+               <!-- <a href="#" class="btn-1">view</a> -->
+              <!-- <div class="row">
+                
+              </div> -->
+            </div>
+  
+            <div class="card-footer">
+              <a aria-disabled="true" href="#" class="btn-1">codes</a>
+              <a href="#" class="btn-1">website</a>
+            </div>
+          </div>
           <div class="card">
             <div class="card-title">
                   portfolio site
