--- a/index.html
+++ b/index.html
@@ -140,14 +140,13 @@
       <p class="my-self">
         Hi there, <br>
         I am Nathanael Alimsiwen Akowan a passionate 
-        and pragmetic developer. With less than one
-        year of expirience in flutter application development,
-        one  year of expirience in web development. <br>
-        I am Data analyst, IOT(Internet Of things), and Machine learning 
-        enthusiast. 
+        and pragmetic developer. With two
+        years of expirience in  web development ,
+        one  year of expirience in flutter application development beginner level . <br>
+        I IOT(Internet Of things), and Machine learning  enthusiast. 
         I am a student of university for development studies Navrongo 
         Campus. <br>
-        I am a level 300 student pursuing Bsc. Information technology
+        I am a graduate student of University for development studies , Ghanan who pursued Bsc. Information technology
         I love to solving problems with my coding skills. I am always ready to learn new technoogies 
         that are evolving.
 
