--- a/index.html
+++ b/index.html
@@ -16,6 +16,33 @@
     <link rel="stylesheet" href="./fontawesome/css/all.css">
     <link rel="stylesheet" href="css.css" />
     <style>
+      /* Basic Reset */
+
+
+
+section p {
+    font-size: 18px;
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+
+
+#skills ul {
+    list-style: none;
+    padding: 0;
+}
+
+#skills ul li {
+    background: #fff;
+    padding: 10px;
+    margin: 5px 0;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+
+
       /* .magnify-on-hover:hover{
         overflow: visible;
         top: 200px;
@@ -152,7 +179,7 @@
 
       </p>
     </section>
-
+ 
       <!-- Projects -->
       <section class="" id="projects">
         <h2 class="contact-head">
@@ -273,9 +300,12 @@
       <h2 class="contact-head">
         Skills
       </h2>
-
-      <div class="bar-1"></div>
-      <div   class="bar-2"></div>
+        <ul>
+            <li>Programming Languages: Python, C++, SQL, HTML, CSS, PHP, Dart, Bash, JavaScript</li>
+            <li>Technologies: Flutter, Laravel, Django, Flask, Bootstrap, jQuery, ReactJS</li>
+            <li>Tools: Anaconda, MS Office Suite, Git</li>
+            <li>Design: Adobe XD, Adobe Photoshop</li>
+        </ul>
     </section>
 
     <!-- contact me -->
@@ -332,7 +362,7 @@
     <!-- footer -->
     <footer>
       <p class="cp">
-        Copyright © 2023 All rights reserved || Created By <span class="creator">Nathanael . A. Akowan</span>
+        Copyright © 2024 All rights reserved || Created By <span class="creator">Nathanael . A. Akowan</span>
       </p>
     </footer>
     <!-- javascript -->
