--- a/index.html
+++ b/index.html
@@ -167,10 +167,10 @@ section p {
       <p class="my-self">
         Hi there, <br>
         I am Nathanael Alimsiwen Akowan a passionate 
-        and pragmetic developer. With two
-        years of expirience in  web development ,
+        and pragmetic developer. With three
+        years of expirience in  web development , two years of experience in building IOT systems,
         one  year of expirience in flutter application development beginner level . <br>
-        I IOT(Internet Of things), and Machine learning  enthusiast. 
+        I IOT(Internet Of things) engineer, and Machine learning  enthusiast. 
         I am a student of university for development studies Navrongo 
         Campus. <br>
         I am a graduate student of University for development studies , Ghanan who pursued Bsc. Information technology
